--- a/config/systemd/user/task-reminder.service
+++ b/config/systemd/user/task-reminder.service
@@ -3,4 +3,4 @@ Description=Taskwarrior notify-send reminder
 
 [Service]
 Type=oneshot
-ExecStart=%h/Polka/local/bin/taskwarrior/task_notify.py
+ExecStart=%h/.local/bin/taskwarrior/task_notify.py
