--- a/config/featherpad/fp.conf
+++ b/config/featherpad/fp.conf
@@ -19,7 +19,7 @@ noIndent=false
 noSyntaxHighlighting=false
 noWrap=false
 pastePaths=false
-recentFiles=/run/media/nick/Main/keys/pass.py, /home/nick/Polka/local/share/nemo/actions/unarchive.nemo_action, /home/nick/Desktop/Downloads/test.py, /home/nick/.local/share/nemo/actions/extract_archive.nemo_action, /etc/named.conf, /home/nick/Polka/config/waybar/config.jsonc, /etc/xdg/reflector/reflector.conf, /home/nick/.config/deluge/core.conf, /home/nick/.config/user-dirs.dirs, /home/nick/Lit/Noah/etc/xdg/user-dirs.defaults
+recentFiles=/etc/mkinitcpio.conf, /etc/named.conf, /run/media/nick/Main/keys/pass.py, /home/nick/Polka/local/share/nemo/actions/unarchive.nemo_action, /home/nick/Desktop/Downloads/test.py, /home/nick/.local/share/nemo/actions/extract_archive.nemo_action, /home/nick/Polka/config/waybar/config.jsonc, /etc/xdg/reflector/reflector.conf, /home/nick/.config/deluge/core.conf, /home/nick/.config/user-dirs.dirs
 recentFilesNumber=10
 recentOpened=false
 removeTrailingSpaces=false
@@ -54,7 +54,7 @@ showCursorPos=false
 showLangSelector=false
 showStatusbar=true
 sidePaneMode=false
-size=@Size(341 525)
+size=@Size(475 524)
 splitterPos=150
 startSize=@Size(700 500)
 sysIcons=false
