--- a/local/share/applications/bluetui.desktop
+++ b/local/share/applications/bluetui.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=Bluetui
 Comment=Launch Blue TUI terminal interface
-Exec=alacritty -e bluetui
+Exec=/usr/sbin/kitty bluetui
 Terminal=false
 Categories=System;Utility;
 Icon=cs-bluetooth
