--- a/config/hypr/always.conf
+++ b/config/hypr/always.conf
@@ -2,8 +2,7 @@
 # Autostart
 ##################################################
 exec-once = gsettings set org.gnome.desktop.interface icon-theme "WhiteSur-dark"
-exec-once = gsettings set org.cinnamon.desktop.default-applications.terminal exec "alacritty"
-exec-once = gsettings set org.cinnamon.desktop.default-applications.terminal exec-arg "-e"
+exec-once = gsettings set org.cinnamon.desktop.default-applications.terminal exec "kitty"
 ecosystem {
   no_update_news = true
   no_donation_nag = true
@@ -47,14 +46,14 @@ $mainMod = SUPER
 $shiftMod = SUPER SHIFT
 
 ##################################################
-# SWITCH KEYBOARD
+# KEYBOARD LANG
 ###################################################
 bindd = ALT, SPACE, Language switch, exec, hyprctl switchxkblayout at-translated-set-2-keyboard next && pkill -RTMIN+6 waybar
 
 ##################################################
 # DEFAULT APPS
 ##################################################
-$terminal = uwsm app -- alacritty -e
+$terminal = uwsm app -- kitty
 $browser = firedragon
 $fileManager = nemo
 
@@ -62,7 +61,7 @@ $fileManager = nemo
 # APP LAUNCH BINDINGS
 ##################################################
 bind = $mainMod, M, exec, uwsm stop
-bind = $mainMod, SPACE, exec, alacritty
+bind = $mainMod, SPACE, exec, $terminal
 bind = $shiftMod, SPACE, exec, ~/.local/bin/fuzzel/mymenu.sh
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, $browser
