--- a/local/share/applications/nvim.desktop
+++ b/local/share/applications/nvim.desktop
@@ -3,7 +3,7 @@ Name=Neovim
 GenericName=Text Editor
 Comment=Edit text files
 TryExec=nvim
-Exec=/usr/sbin/alacritty -e nvim %F
+Exec=/usr/sbin/kitty nvim %F
 Terminal=false
 Type=Application
 Keywords=Text;editor;
