before nvim reset

--- a/config/featherpad/fp.conf
+++ b/config/featherpad/fp.conf
@@ -5,7 +5,7 @@ autoReplace=false
 autoSave=false
 autoSaveInterval=1
 darkBgColorValue=15
-darkColorScheme=false
+darkColorScheme=true
 dateFormat=
 dictionaryPath=
 executeCommand=
@@ -19,7 +19,7 @@ noIndent=false
 noSyntaxHighlighting=false
 noWrap=false
 pastePaths=false
-recentFiles=/home/nick/Polka/config/kitty/kitty.conf, /home/nick/Polka/local/share/applications/org.kde.partitionmanager.desktop, /home/nick/1, /home/nick/Lit/Noah/noah.json, /home/nick/.ssh/bridge_creds.txt, /home/nick/jest.json, /home/nick/Lit/Docs/base/zsh/zsh_history, /home/nick/k.py, /home/nick/Lit/Docs/base/git/config, /home/nick/.config/git/config
+recentFiles=/home/nick/.config/nvim/init.lua, /home/nick/.config/nvim/lsp/lua_ls.lua, /home/nick/.config/nvim/lsp/pyright.lua, /home/nick/.config/nvim/lsp/ruff.lua, /home/nick/.config/nvim/lsp/ty.lua, /home/nick/.config/nvim/lua/plugins/treesitter.lua, /home/nick/.config/nvim/lua/plugins/neo-tree.lua, /home/nick/.config/nvim/lua/plugins/lspconfig.lua, /home/nick/.config/nvim/lua/plugins/tresitter.lua, /home/nick/.config/kitty/kitty.conf
 recentFilesNumber=10
 recentOpened=false
 removeTrailingSpaces=false
@@ -48,13 +48,13 @@ noMenubar=false
 noToolbar=false
 openInWindows=false
 position=none
-prefSize=@Size(-1 -1)
+prefSize=@Size(445 530)
 sharedSearchHistory=false
 showCursorPos=false
 showLangSelector=false
 showStatusbar=true
 sidePaneMode=false
-size=@Size(442 524)
+size=@Size(472 524)
 splitterPos=150
 startSize=@Size(700 500)
 sysIcons=false
