--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,8 +1,12 @@
 # General Settings
 window_title "Kitty@yulia"
 scrollback_lines 10000
-scrollback_multiplier 3
-padding 5
+# window_padding_width 3
+# window_padding_height 6 0
+copy_on_select yes
+map middle_button paste_selection
+live_config_reload no
+confirm_os_window_close 0
 
 # Colors (Normal and Bright)
 background #101013
@@ -25,7 +29,7 @@ color14 #a4ffff
 color15 #ffffff
 
 # Font Settings
-font_size 10.5
+font_size 11
 font_family FiraMono Nerd Font
 bold_font FiraMono Nerd Font
 italic_font FiraMono Nerd Font
@@ -35,11 +39,4 @@ cursor_shape underline
 cursor_thickness 0.15
 cursor_unfocused_hollow yes
 
-# Mouse Bindings
-map middle_button paste_selection
-
-# Live Config Reload
-live_config_reload no
-
-confirm_os_window_close 0
 
