--- a/config/featherpad/fp.conf
+++ b/config/featherpad/fp.conf
@@ -19,7 +19,7 @@ noIndent=false
 noSyntaxHighlighting=false
 noWrap=false
 pastePaths=false
-recentFiles=/home/nick/.config/nvim/init.lua, /home/nick/.config/nvim/lsp/lua_ls.lua, /home/nick/.config/nvim/lsp/pyright.lua, /home/nick/.config/nvim/lsp/ruff.lua, /home/nick/.config/nvim/lsp/ty.lua, /home/nick/.config/nvim/lua/plugins/treesitter.lua, /home/nick/.config/nvim/lua/plugins/neo-tree.lua, /home/nick/.config/nvim/lua/plugins/lspconfig.lua, /home/nick/.config/nvim/lua/plugins/tresitter.lua, /home/nick/.config/kitty/kitty.conf
+recentFiles=/home/nick/.config/nvim/lua/plugins/pyright.lua, /home/nick/.config/nvim/lua/plugins/ty.lua, /home/nick/.config/nvim/lua/plugins/lspconfig.lua, /home/nick/.config/nvim/lua/lsp/ruff.lua, /home/nick/.config/nvim/lua/lsp/ty.lua, /home/nick/.config/nvim/init.lua, /home/nick/.config/nvim/lua/config/options.lua, /home/nick/.config/nvim/lua/plugins/lualine.lua, /home/nick/Lit/polka/config/nvim/lua/plugins/lualine.lua, /home/nick/.config/nvim/lua/plugins/snacks.lua
 recentFilesNumber=10
 recentOpened=false
 removeTrailingSpaces=false
@@ -54,7 +54,7 @@ showCursorPos=false
 showLangSelector=false
 showStatusbar=true
 sidePaneMode=false
-size=@Size(472 524)
+size=@Size(527 524)
 splitterPos=150
 startSize=@Size(700 500)
 sysIcons=false
