weather good 90 percent

--- a/config/fuzzel/vpnmenu.ini
+++ b/config/fuzzel/vpnmenu.ini
@@ -1,11 +1,12 @@
 [main]
 hide-prompt=true
-width=12
+width=8
 anchor=top-right
-x-margin=100
+x-margin=114
 font=FiraMono Nerd Font Light:size=8
 layer=overlay
 vertical-pad=12
+line-height=16
 horizontal-pad=10
 letter-spacing=1.1
 
@@ -23,4 +24,4 @@ input=cdd6f4ff
 counter=7f849cff
 
 [border]
-selection-radius=5
+selection-radius=3
