--- a/local/bin/weather/pyproject.toml
+++ b/local/bin/weather/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.14"
 dependencies = [
     "openmeteo-requests>=1.7.5",
     "pandas>=3.0.0",
+    "pydantic>=2.12.5",
+    "pytz>=2025.2",
     "requests-cache>=1.2.1",
     "retry-requests>=2.0.0",
 ]
