--- a/config/hypr/always.conf
+++ b/config/hypr/always.conf
@@ -66,9 +66,10 @@ bind = $shiftMod, SPACE, exec, ~/.local/bin/fuzzel/mymenu.sh
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, T, exec, $terminal nvim
-bind = $shiftMod, T, exec, ~/.local/bin/fuzzel/vpnmenu.sh
+bind = $shiftMod, B, exec, ~/.local/bin/fuzzel/vpnmenu.sh
 bind = $mainMod, R, exec, fuzzel
-bind = $shiftMod, R, exec, killall -SIGUSR1 waybar
+bind = $shiftMod, R, exec, pkill -SIGUSR1 waybar
+bind = $shiftMod, T, exec, ~/.local/bin/keyboard/osd_handle.sh
 
 ##################################################
 # WINDOW FOCUS AND SWITCHING
