--- a/config/hypr/gamemode/gamemode.conf
+++ b/config/hypr/gamemode/gamemode.conf
@@ -4,7 +4,7 @@ general {
   border_size = 0
   allow_tearing = true
   resize_on_border = false
-  layout = master        # Keeps main window large for games
+  layout = master
 }
 decoration {
     rounding = 0
@@ -19,7 +19,7 @@ decoration {
     }
 }
 animations {
-    enabled = false  # Disable all animations for performance
+    enabled = false
 }
 dwindle {
     pseudotile = false
