--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -13,7 +13,7 @@ background #101013
 foreground #F4F5F6
 color0 #21222c
 color1 #ff5555
-color2 #50fa7b
+color2 #00ff99
 color3 #f1fa8c
 color4 #0072ff
 color5 #ff79c6
