--- a/config/lazygit/config.yml
+++ b/config/lazygit/config.yml
@@ -1,6 +1,33 @@
 gui:
   nerdFontsVersion: "3"
   sidePanelWidth: 0.25
+  theme:
+    activeBorderColor:
+      - green
+    inactiveBorderColor:
+      - default
+    searchingActiveBorderColor:
+      - cyan
+    optionsTextColor:
+      - blue
+    selectedLineBgColor:
+      - blue
+    inactiveViewSelectedLineBgColor:
+      - bold
+    cherryPickedCommitFgColor:
+      - blue
+    cherryPickedCommitBgColor:
+      - cyan
+    markedBaseCommitFgColor:
+      - blue
+    markedBaseCommitBgColor:
+      - yellow
+    unstagedChangesColor:
+      - red
+    defaultFgColor:
+      - default
 git:
+  pagers:
+    - pager: delta --dark --paging=never
   autoRefresh: false
 notARepository: skip
