--- a/local/share/applications/deluge.desktop
+++ b/local/share/applications/deluge.desktop
@@ -7,8 +7,8 @@ Comment=Download and share files over BitTorrent
 Keywords=bittorrent;torrent;magnet;download;p2p;torrents;downloading;uploading;share;sharing;
 Keywords[en_GB]=bittorrent;torrent;magnet;download;p2p;torrents;downloading;uploading;share;sharing;
 Keywords[ru]=bittorrent;torrent;magnet;download;p2p;torrents;downloading;uploading;share;sharing;битторрент;торрент;скачать;загрузить;раздача;поделиться;
-TryExec=/home/nick/Polka/local/bin/deluged/deluge_launch.sh
-Exec=/home/nick/Polka/local/bin/deluged/deluge_launch.sh %U
+TryExec=%h/.local/bin/deluged/deluge_launch.sh
+Exec=%h/.local/bin/deluged/deluge_launch.sh %U
 Icon=transmission
 Terminal=false
 Type=Application
