--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -19,20 +19,15 @@ prepend_keymap = [
   { on = ["M", "a"], run = "plugin gvfs -- add-mount", desc = "Add a GVFS mount URI" },
   { on = ["M", "e"], run = "plugin gvfs -- edit-mount", desc = "Edit a GVFS mount URI" },
   { on = ["M", "r"], run = "plugin gvfs -- remove-mount", desc = "Remove a GVFS mount URI" },
-  { on = ["g", "m"], run = "plugin gvfs -- jump-to-device", desc = "Select device then jump to its mount point" },
-  { on = ["g", "m"], run = "plugin gvfs -- jump-to-device --automount", desc = "Automount then select device to jump to its mount point" },
-  { on = ["`", "`"], run = "plugin gvfs -- jump-back-prev-cwd", desc = "Jump back to the position before jumped to device" },
-  { on = ["M", "t"], run = "plugin gvfs -- automount-when-cd", desc = "Enable automount when cd to device under cwd" },
-  { on = ["M", "T"], run = "plugin gvfs -- automount-when-cd --disabled", desc = "Disable automount when cd to device under cwd" },
   { on = ["M", "s"], run = "plugin sshfs -- menu", desc = "Open SSHFS options" },
-  { on = ["u", "a"], run = "plugin yamb -- save", desc = "Add bookmark" },
-  { on = ["B"], run = "plugin yamb -- jump_by_key", desc = "Jump bookmark by key" },
-  { on = ["u", "G"], run = "plugin yamb -- jump_by_fzf", desc = "Jump bookmark by fzf" },
-  { on = ["u", "d"], run = "plugin yamb -- delete_by_key", desc = "Delete bookmark by key" },
-  { on = ["u", "D"], run = "plugin yamb -- delete_by_fzf", desc = "Delete bookmark by fzf" },
-  { on = ["u", "A"], run = "plugin yamb -- delete_all", desc = "Delete all bookmarks" },
-  { on = ["u", "r"], run = "plugin yamb -- rename_by_key", desc = "Rename bookmark by key" },
-  { on = ["u", "R"], run = "plugin yamb -- rename_by_fzf", desc = "Rename bookmark by fzf" },
+  { on = ["B", "a"], run = "plugin yamb -- save", desc = "Add bookmark" },
+  { on = ["b"], run = "plugin yamb -- jump_by_key", desc = "Jump bookmark by key" },
+  { on = ["B", "G"], run = "plugin yamb -- jump_by_fzf", desc = "Jump bookmark by fzf" },
+  { on = ["B", "d"], run = "plugin yamb -- delete_by_key", desc = "Delete bookmark by key" },
+  { on = ["B", "D"], run = "plugin yamb -- delete_by_fzf", desc = "Delete bookmark by fzf" },
+  { on = ["B", "A"], run = "plugin yamb -- delete_all", desc = "Delete all bookmarks" },
+  { on = ["B", "r"], run = "plugin yamb -- rename_by_key", desc = "Rename bookmark by key" },
+  { on = ["B", "R"], run = "plugin yamb -- rename_by_fzf", desc = "Rename bookmark by fzf" },
 ]
 keymap = [
   { on = "<Esc>", run = "escape", desc = "Exit visual mode, clear selection, or cancel search" },
